modules/gdscript/tests/scripts/runtime/errors/gd_utility_function_wrong_arg.gd
#debug-only: Run-time utility function call errors are different in release

func test():
	var x = Color()
	print(len(x)) # GDScript utility function.
